fixed bug with signup button and cropped image

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -127,14 +127,12 @@ body {
 
 .cover {
   width: 100%;
-  /*width: 100vw;*/
   max-height: 700px;
   padding: 44% 0 20% 0;
   background-image: url('../images/foodTrack3.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  /*padding: 480px 20px;*/
 }
 .cover .btn-lg {
   padding: 10px 20px;
@@ -165,16 +163,16 @@ body {
 }
 
 .homeImg1{
-  width: 99%;
-  height: 430px;
+  width: 90%;
+  height: auto;
 }
 
 .homeImg2{
-  width: 100%;
+  width: 90%;
 }
 
 .homeImg3{
-  width: 100%;
+  width: 90%;
 }
 
 
@@ -209,7 +207,6 @@ body {
     top: 0;
   }
   .mastfoot {
-    /*position: fixed;*/
     bottom: 0;
   }
   /* Start the vertical centering */
@@ -304,10 +301,3 @@ body {
     padding: 90% 0 10% 0;
   }
 }
-
-/*@media (min-width: 768px) and (max-width: 990px) {
-  .navbar-brand img{
-    margin-top: -34%;
-    margin-left: -30%;
-  }
-}*/
